--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -1,4 +1,7 @@
-<!-- <home-nav></home-nav> -->
-<side-nav></side-nav>
-<router-outlet></router-outlet>
-<!-- <footer></footer> -->
+<div class="menu">
+  <side-nav class="menu-side"></side-nav>
+  <div class="contents">
+    <nav-bar></nav-bar>
+    <router-outlet class="components"></router-outlet>
+  </div>
+</div>
