--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -3,5 +3,6 @@
   <div class="contents">
     <nav-bar></nav-bar>
     <router-outlet class="components"></router-outlet>
+    <footer></footer>
   </div>
 </div>
