--- a/src/home/components/side-nav/side-nav.component.scss
+++ b/src/home/components/side-nav/side-nav.component.scss
@@ -69,3 +69,19 @@
     }
   }
 }
+
+@media (max-width: 767px) {
+  .side-nav {
+    position: relative;
+    width: 100%;
+    height: 170px;
+    // padding: 30px 0;
+  }
+  .nav {
+    &-item {
+      position: relative;
+      display: inline-block;
+      list-style: none;
+    }
+  }
+}
