--- a/src/home/home.component.scss
+++ b/src/home/home.component.scss
@@ -9,3 +9,9 @@
   margin-left: 260px;
   margin-top: 70px;
 }
+@media (max-width: 767px) {
+  .contents {
+    margin-top: 0;
+    margin-left: 0;
+  }
+}
