--- a/src/blogs/components/blogs-navbar/blogs-navbar.component.scss
+++ b/src/blogs/components/blogs-navbar/blogs-navbar.component.scss
@@ -96,6 +96,23 @@ img {
 @media (max-width: 767px) {
   .search-bar {
     position: relative;
+    // top: 0;
+    // right: 0;
+    // width: -webkit-calc(100% - 260px);
     width: 100%;
+    // z-index: 15;
+    // height: 70px;
+    // padding: 0 40px;
+    // -webkit-box-shadow: 0 1px 3px 0 rgba(38, 41, 58, 0.06);
+    // box-shadow: 0 1px 3px 0 rgba(38, 41, 58, 0.06);
+    // background: #26293a;
+    // display: -webkit-box;
+    // display: -webkit-flex;
+    // display: -ms-flexbox;
+    // display: flex;
+    // -webkit-box-align: center;
+    // -webkit-align-items: center;
+    // -ms-flex-align: center;
+    // align-items: center;
   }
 }
